--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "author": "Harshita Garg",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
     "ejs": "^2.5.7",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
+    "geocoder": "^0.2.3",
     "method-override": "^2.3.9",
+    "moment": "^2.19.1",
     "mongoose": "^4.11.5",
+    "nodemailer": "^4.2.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1"
